# niagara

./: .gitignore  README.md  pyproject.toml
niagara/: __init__.py  chain.py  confidence_calibrators.py  confidence_signals.py  confidence_transformations.py  custom_types.py  exceptions.py  model.py  models.json  utils.py
niagara/api_clients/: __init__.py  anthropic_client.py  api_client.py  fireworks_client.py  openai_client.py  together_client.py
niagara/probabilistic_modeling/: marginals.py  optimize_cascade.py
